[gd_scene load_steps=4 format=3 uid="uid://77w2btfiqbof"]

[ext_resource type="Theme" uid="uid://blbl1uhbtj7qj" path="res://Resources/zude_tools_theme.tres" id="1_isyab"]
[ext_resource type="Script" path="res://Scenes/settings_path.gd" id="2_0sdn6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uuoq4"]

[node name="SettingsPath" type="PanelContainer" node_paths=PackedStringArray("settings_path_label", "settings_path_line_edit", "settings_path_button")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 35.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_isyab")
theme_override_styles/panel = SubResource("StyleBoxEmpty_uuoq4")
script = ExtResource("2_0sdn6")
settings_path_label = NodePath("SettingsPathHBox/SettingsPathLabel")
settings_path_line_edit = NodePath("SettingsPathHBox/SettingsPathLineEdit")
settings_path_button = NodePath("SettingsPathHBox/SettingsPathButton")

[node name="SettingsPathHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SettingsPathLabel" type="LineEdit" parent="SettingsPathHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
editable = false
expand_to_text_length = true

[node name="SettingsPathLineEdit" type="LineEdit" parent="SettingsPathHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
clear_button_enabled = true

[node name="SettingsPathButton" type="Button" parent="SettingsPathHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8
