class_name ZudeToolsSettingsPath
extends Control

#region Onready Variables

@onready var settings_path_label = %SettingsPathLabel
@onready var settings_path_line_edit = %SettingsPathLineEdit
@onready var settings_path_button = %SettingsPathButton

#endregion

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
